fix: nuber in form leter spacing

--- a/src/components/widget/forms/kitchen-form/style.scss
+++ b/src/components/widget/forms/kitchen-form/style.scss
@@ -115,6 +115,11 @@
       border-color: #007bff;
       outline: none;
     }
+
+    &--number{
+      letter-spacing: 4px;
+    }
+
   }
 
   &__number-error {
